# skatengine

./: README.md
GTestForSkatV2/: CMakeLists.txt
GTestForSkatV2/include/: stubplayer.h
GTestForSkatV2/src/: stubplayer.cpp
GTestForSkatV2/testClasses/: ExplTest.cpp  iplayertest.cpp  iplayertest.h  skatdecktest.cpp  skatdecktest.h  skatgameresulttest.cpp  skatgameresulttest.h  skatgamesetuptest.cpp  skatgamesetuptest.h  stubgametest.cpp  stubgametest.h  tricktest.cpp  tricktest.h
GTestForSkatV2/testMethods/: cardTests.cpp  codew.cpp
SkatQTandEngine/: SkatQTandEngine.pro  main.cpp  pics.qrc  qskatmainwindow.cpp  qskatmainwindow.h  qskatmainwindow.ui
SkatQTandEngine/interface/: qskatengine.cpp  qskatengine.h
SkatQTandEngine/skatEngine/: skatengine.cpp  skatengine.h  skatenums.h
SkatQTandEngine/skatEngine/include/: card.h  cardset.h  cpuplayer.h  decisionmaker.h  game.h  humanplayer.h  player.h  random_numbers.h  round.h  roundinfo.h  trick.h
SkatQTandEngine/skatEngine/src/: card.cpp  cardset.cpp  cpuplayer.cpp  decisionmaker.cpp  game.cpp  humanplayer.cpp  player.cpp  random_numbers.cpp  round.cpp  roundinfo.cpp  trick.cpp
SkatQTandEngine/ui/: carditem.cpp  carditem.h  showcardsscene.cpp  showcardsscene.h  skatgamewindow.cpp  skatgamewindow.h  skatgamewindow.ui
SkatV2/: SkatV2.pro
SkatV2/Engine/include/: card.h  gameinitiator.h  ideck.h  iplayer.h  itable.h  random_numbers.h  resultcollector.h  skatdeck.h  skatgameresult.h  skatgamesetup.h  skatplayer.h  trick.h
SkatV2/Engine/src/: gameinitiator.cpp  iplayer.cpp  random_numbers.cpp  resultcollector.cpp  skatdeck.cpp  skatgameresult.cpp  skatgamesetup.cpp  trick.cpp
SkatV2/Player/include/: stub.h
SkatV2/Player/src/: stub.cpp
UnitTestG/: CMakeLists.txt
UnitTestG/src/: main.cpp
UnitTestG/testClasses/: ExplTest.h  engineTest1.cpp  engineTest1.h
UnitTestG/testMethods/: basicTests.cpp
